# akit

./: Cargo.toml  README.md
docs/: design.md  embedding.md  harness-registry.md  usage.md
src/: agentpkg.rs  bundle.rs  catalog.rs  collection.rs  config.rs  doctor.rs  exec.rs  fsops.rs  gitexclude.rs  harness.rs  install.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  materialize.rs  ops.rs  ownership.rs  plan.rs  project.rs  reconcile.rs  remote.rs  search.rs  show.rs  transport.rs  verify.rs
tests/: add.rs  bundle.rs  catalog.rs  copy.rs  doctor.rs  embed.rs  install_cli.rs  remote.rs  rm_ls.rs  search.rs
